# BigBaseC

./: .gitignore  BigBaseC.sln  README.md
source/: BigBaseC.vcxproj  BigBaseC.vcxproj.filters  CMakeLists.txt  classes.h  crossmap.h  enums.h  fiber.c  fiber.h  globals.h  gui.c  gui.h  hook.c  hook.h  hooks.c  hooks.h  invoker.c  invoker.h  logger.c  logger.h  main.c  natives.h  pattern.c  pattern.h  pch.c  pch.h  pointers.c  pointers.h  script.c  script.h
